# chroma

./: .chroma_env  .dockerignore  .env  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .taplo.toml  13889.out  13889_error.out  21135.out  21135_error.out  23042.out  23042_error.out  AGENTS.md  ARROW_PATCH_README.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  DEVELOP.md  DEV_README.md  Dockerfile  Dockerfile.alpine  Dockerfile.windows  Dockerfile_Distributed  MANIFEST-old.in  MANIFEST.in  Makefile  PAPER.md  Package.swift  README.md  RELEASE_PROCESS.md  STRICT_TYPES_SUMMARY.md  Tiltfile  Tiltfile.mcmr  action.yml  algo-experiments.ipynb  (+77 more)
chroma-client/: DEVELOP.md  README.md  dev_requirements.txt  pyproject.toml  setup.py  tox.ini
chroma-client/src/chroma_client/: __init__.py  client.py
chroma-client/src/cli/: command.py
chroma-client/tests/: test_client.py
chroma-server/: .env  .gitignore  Dockerfile  DockerfileCelery  README.md  app.py  chroma-in-notebook.ipynb  docker-compose.test.yml  in-memory_demo.ipynb  load_parquet.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  run_tests.sh  test.ipynb  worker.py
chroma-server/chroma_server/: __init__.py  api.py  core.py  routes.py  utils.py  worker.py
chroma-server/chroma_server/algorithms/: core_algorithms.py  rand_subsample.py  stub_distances.py
chroma-server/chroma_server/db/: abstract.py  clickhouse.py  duckdb.py  postgres.py
chroma-server/chroma_server/index/: abstract.py  hnswlib.py
chroma-server/chroma_server/test/: test_api.py  test_benchmarks.py  test_client.py
chroma-server/chroma_server/types/: __init__.py
chroma-server/chroma_server/utils/: error_reporting.py  sampling.py  sampling_examples.ipynb
chromadb/rust_bindings/: Cargo.toml  pyproject.toml
chromadb/rust_bindings/src/: lib.rs
clients/python/: README.md  build_python_thin_client.sh  integration-test.sh  is_thin_client.py  pyproject.toml  requirements.txt  requirements_dev.txt
cpp/embeddings/: CMakeLists.txt  embeddings.cpp
notion_cli/rust/: .gitignore  Cargo.toml
notion_cli/rust/src/: main.rs  token.rs  util.rs
pip_library/: setup.cfg
rust/agent/: Cargo.toml
rust/agent/src/: agent.rs  error.rs  lib.rs  provider.rs  tool.rs
rust/api-types/: Cargo.toml
rust/api-types/src/: error.rs  fork.rs  get.rs  heartbeat.rs  lib.rs  user_identity.rs
rust/benchmark/: Cargo.toml
rust/benchmark-datasets/: Cargo.toml
rust/benchmark-datasets/src/: lib.rs  main.rs  traits.rs  types.rs  util.rs
rust/benchmark/src/: benchmark.rs  lib.rs
rust/blockstore/: Cargo.toml
rust/blockstore/benches/: blockfile_writer.rs  dashmap_blockfile.rs  writer.rs
rust/blockstore/src/: blockfile_writer_test.rs  config.rs  key.rs  lib.rs  positional_posting_list_value.rs  provider.rs  types.rs
rust/blockstore/tests/: blockfile_writer_test.proptest-regressions  blockfile_writer_test.rs
rust/cache/: Cargo.toml
rust/cache/src/: async_partitioned_mutex.rs  cache.rs  config.rs  foyer.rs  lib.rs  main.rs  nop.rs  unbounded.rs
rust/chroma/: Cargo.toml  README.md  chroma.sqlite3
rust/chroma/examples/: bm25_vector.rs  cloud-embeddings.rs  collection_search.rs  conditional_transactions.rs  embeddings.rs  fill_collection.rs  load_ddl.rs  load_generator.rs  load_generator_pointed.rs  load_generator_scattered.rs  run_server.rs  search_collection.rs  test_array_metadata.rs  witness_backoff.rs
rust/chroma/src/: attached_function.rs  bench.rs  client.rs  collection.rs  conditional_transaction.rs  lib.rs  server.rs  sqlite.rs  types.rs
rust/chroma/tests/: server_integration.rs  test_k8s_integration_conditional_transactions.rs
rust/cli/: Cargo.toml  Dockerfile  chroma
rust/cli/chat_with_your_docs/: pnpm-lock.yaml
rust/cli/chroma/: chroma.sqlite3
rust/cli/install/: install.ps1  install.sh
rust/cli/src/: client.rs  config_store.rs  dashboard_client.rs  hnsw_integrity_check.rs  lib.rs  main.rs  style.rs  terminal.rs  types.rs  ui_utils.rs  utils.rs
rust/cli/src/tui/: mod.rs  (+1 more)
rust/cli/test_data/: chroma.sqlite3
rust/config/: Cargo.toml
rust/config-validator/: Cargo.toml
rust/config-validator/src/: main.rs
rust/config/src/: helpers.rs  lib.rs  registry.rs  spanner.rs
rust/distance/: Cargo.toml
rust/distance/benches/: distance_metrics.rs
rust/distance/src/: distance.rs  distance_avx.rs  distance_avx512.rs  distance_neon.rs  distance_sse.rs  lib.rs  types.rs
rust/error/: Cargo.toml
rust/error/src/: lib.rs  sqlx.rs  tonic.rs  validator.rs
rust/faults/: Cargo.toml
rust/faults/src/: lib.rs
rust/foundation/: Cargo.toml
rust/foundation-api/: Cargo.toml
rust/foundation-api/examples/: trajectory-load-chroma.rs  trajectory-load-http.rs  trajectory-roundtrip.rs
rust/foundation-api/src/: collections.rs  config.rs  foundation_chroma.rs  lib.rs  server.rs
rust/foundation-slack-render/: Cargo.toml
rust/foundation-slack-render/src/: golden.rs  lib.rs
rust/foundation/cli/: Cargo.toml  README.md
rust/frontend/: Cargo.toml  Dockerfile  frontend_config.yaml  single_node_frontend_config.yaml
rust/frontend-core/: Cargo.toml
rust/frontend-core/src/: attached_function.rs  attached_function_ops.rs  auth.rs  collection_ops.rs  config.rs  errors.rs  foundation.rs  lib.rs  middleware.rs  retry.rs  routes.rs  traced_json.rs  tracing.rs
rust/frontend/benches/: base64.rs
rust/frontend/proptest-regressions/: base64_decode.txt
rust/frontend/sample_configs/: distributed.yaml  distributed2.yaml  distributed_mcmr.yaml  docker_single_node.yaml  single_node.yaml  single_node_full.yaml  tilt_config.yaml
rust/frontend/src/: ac.rs  api.rs  base64_decode.rs  config.rs  errors.rs  frontend.rs  get_collection_with_segments_provider.rs  lib.rs  local_compaction_manager.rs  metering_http.rs  server.rs  server_middleware.rs  tower_tracing.rs  traced_json.rs  utils.rs
rust/frontend/tests/: test_collection.proptest-regressions  test_collection.rs  test_delete_limit.rs  test_k8s_integration_fork_count.rs
rust/garbage_collector/: Cargo.toml  Dockerfile  garbage_collector_config.yaml
(+5390 files in other folders)
