[workspace]
resolver = "2"

members = ["rust/benchmark", "rust/blockstore", "rust/cache", "rust/chroma", "rust/config", "rust/distance", "rust/error", "rust/index", "rust/load", "rust/storage", "rust/types", "rust/worker"]

[workspace.dependencies]
arrow = "52.2.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", features = ["async_tokio"] }
figment = { version = "0.10.12", features = ["env", "yaml", "test"] }
flatbuffers = "24.3.25"
futures = "0.3"
num_cpus = "1.16.0"
opentelemetry = { version = "0.27.0", default-features = false, features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto"] }
opentelemetry-http = { version = "0.27", features = ["reqwest"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
parking_lot = { version = "0.12.3", features = ["serde"] }
prost = "0.13"
prost-types = "0.12"
roaring = "0.10.6"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tantivy = "0.21.1"
thiserror = "1.0.69"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.12"
tonic = "0.12"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

chroma-benchmark = { path = "rust/benchmark" }
chroma-blockstore = { path = "rust/blockstore" }
chroma-error = { path = "rust/error" }
chroma-config = { path = "rust/config" }
chroma-storage = { path = "rust/storage" }
chroma-cache = { path = "rust/cache" }
chroma-types = { path = "rust/types" }
chroma-index = { path = "rust/index" }
chroma-distance = { path = "rust/distance" }
worker = { path = "rust/worker" }

# Dev dependencies
bincode = "1.3.3"
indicatif = "0.17.9"
proptest = "1.5.0"
proptest-state-machine = "0.3.0"
rand = "0.8.5"
rand_xorshift = "0.3.0"
rayon = "1.10.0"
shuttle = "0.7.1"
tempfile = "3.14.0"
itertools = "0.13.0"

[profile.release]
debug = 2
lto = "thin"
