[workspace]
resolver = "2"

members = ["rust/benchmark", "rust/blockstore", "rust/cache", "rust/chroma", "rust/config", "rust/distance", "rust/error", "rust/frontend", "rust/garbage_collector", "rust/index", "rust/load", "rust/log", "rust/log-service", "rust/memberlist", "rust/metering-macros", "rust/metering", "rust/storage", "rust/system", "rust/sysdb", "rust/types", "rust/worker", "rust/segment", "rust/python_bindings", "rust/mdac", "rust/tracing", "rust/sqlite", "rust/cli", "rust/wal3", "rust/js_bindings", "rust/jemalloc-pprof-server", "rust/s3heap", "rust/s3heap-service", "rust/api-types"]

[workspace.dependencies]
anyhow = "1.0"
arrow = "55.1"
async-trait = "0.1"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.63"
aws-smithy-types = "1.2"
axum = { version = "0.8", features = ["macros"] }
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10.12", features = ["env", "yaml", "test"] }
flatbuffers = "25.2.10"
futures = "0.3"
futures-core = "0.3"
http-body-util = "0.1.3"
object_store = { version = "0.12", features = ["gcp"] }
lazy_static = { version = "1.4" }
lexical-core = "1.0"
murmur3 = "0.5.2"
num_cpus = "1.16.0"
once_cell = "1.21.3"
opentelemetry = { version = "0.27.0", default-features = false, features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto"] }
opentelemetry-http = { version = "0.27", features = ["reqwest-rustls"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
parking_lot = { version = "0.12.3", features = ["serde"] }
parquet = { version = "55.1", features = ["async"] }
pin-project = "1.1.10"
prost = "0.13"
prost-types = "0.13.5"
regex = "1.11.1"
regex-syntax = "0.8.5"
roaring = "0.10.6"
sea-query = "0.32"
sea-query-binder = "0.7"
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.133"
setsum = "0.7"
sprs = "0.11"
tantivy = "0.22.0"
thiserror = "1.0.69"
tokio = { version = "1.41", features = ["fs", "macros", "rt-multi-thread", "time", "io-util", "signal"] }
tokio-util = "0.7.12"
tonic = "0.12"
tonic-health = "0.12.3"
tower = { version = "0.4.13", features = ["discover"] }
backon = "1.3.0"
tracing = { version = "0.1" }
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "v7", "fast-rng", "macro-diagnostics", "serde"] }
utoipa = { version = "5", features = ["macros", "axum_extras", "debug", "uuid"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "postgres", "chrono"] }
sha2 = "0.10.8"
md5 = "0.7.0"
pyo3 = { version = "0.24.1", features = ["abi3-py39"] }
http = "1.1.0"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
bytemuck = "1.21.0"
rayon = "1.10.0"
validator = { version = "0.19", features = ["derive"] }
rust-embed = { version = "8.5.0", features = ["include-exclude", "debug-embed"] }
hnswlib = { version = "0.8.2", git = "https://github.com/chroma-core/hnswlib.git", branch = "master" }
reqwest = { version = "0.12.9", features = ["rustls-tls-native-roots", "http2"], default-features = false }
random-port = "0.1.1"
ndarray = { version = "0.16.1", features = ["approx"] }
humantime = { version = "2.2.0" }
petgraph = { version = "0.8.1" }
base64 = "0.22"
tikv-jemallocator = { version = "0.6.0", features = ["profiling"] }

chroma = { path = "rust/chroma", version = "0.7.0" }
chroma-api-types = { path = "rust/api-types", version = "0.6.0" }
chroma-benchmark = { path = "rust/benchmark" }
chroma-blockstore = { path = "rust/blockstore" }
chroma-cache = { path = "rust/cache" }
chroma-config = { path = "rust/config" }
chroma-distance = { path = "rust/distance" }
chroma-error = { path = "rust/error", version = "0.6.0" }
chroma-frontend = { path = "rust/frontend" }
chroma-index = { path = "rust/index" }
chroma-log = { path = "rust/log" }
chroma-memberlist = { path = "rust/memberlist" }
chroma-metering-macros = { path = "rust/metering-macros" }
chroma-metering = { path = "rust/metering" }
chroma-segment = { path = "rust/segment" }
chroma-storage = { path = "rust/storage" }
chroma-system = { path = "rust/system" }
chroma-sysdb = { path = "rust/sysdb" }
chroma-tracing = { path = "rust/tracing" }
chroma-types = { path = "rust/types", version = "0.6.0" }
chroma-sqlite = { path = "rust/sqlite" }
chroma-cli = { path = "rust/cli" }
chroma-jemalloc-pprof-server = { path = "rust/jemalloc-pprof-server" }
mdac = { path = "rust/mdac" }
s3heap = { path = "rust/s3heap" }
s3heap-service = { path = "rust/s3heap-service" }
wal3 = { path = "rust/wal3" }
worker = { path = "rust/worker" }

# Dev dependencies
bincode = "1.3.3"
criterion = { version = "0.7", features = ["async_tokio"] }
indicatif = { version = "0.17.9", features = ["rayon"] }
proptest = "1.6.0"
proptest-state-machine = "0.3.1"
proptest-derive = "0.5.1"
rand = "0.8.5"
rand_xorshift = "0.3.0"
shuttle = "0.7.1"
tempfile = "3.14.0"
itertools = "0.13.0"
serial_test = "3.2.0"
zip = "2.3.0"

[profile.dev]
# Significantly reduces compile times
split-debuginfo = "unpacked"

[profile.release]
debug = 2
lto = "thin"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
