[project]
name = "chromadb"
dynamic = ["version"]

authors = [
  { name="Jeff Huber", email="jeff@trychroma.com" },
  { name="Anton Troynikov", email="anton@trychroma.com" }
]
description = "Chroma."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  'pandas >= 1.3',
  'requests >= 2.28',
  'pydantic >= 1.9',
  'hnswlib >= 0.7',
  'clickhouse_connect >= 0.5.7',
  'duckdb >= 0.7.1',
  'fastapi >= 0.85.1',
  'uvicorn[standard] >= 0.18.3',
  'numpy >= 1.21.6',
  'posthog >= 2.4.0',
  'typing_extensions >= 4.5.0',
  'pulsar-client>=3.1.0',
  'onnxruntime >= 1.14.1',
  'tokenizers >= 0.13.2',
  'tqdm >= 4.65.0',
  'overrides >= 7.3.1',
  'graphlib_backport >= 1.0.3; python_version < "3.9"'
]

[tool.black]
line-length = 88
required-version = "23.3.0" # Black will refuse to run if it's not this version.
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

[tool.pytest.ini_options]
pythonpath = ["."]

[project.urls]
"Homepage" = "https://github.com/chroma-core/chroma"
"Bug Tracker" = "https://github.com/chroma-core/chroma/issues"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme="no-local-version"

[tool.setuptools]
packages = ["chromadb"]
