[metadata]
name = chroma
version = 0.0.1
author = Jeff Huber
author_email = jeff@trychroma.com
description = Chroma
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
python_requires = >=3.7
install_requires = 
    werkzeug==2.0.3
    flask
    ariadne
    flask-sqlalchemy
    gql
    aiohttp
    gorilla
    argcomplete
    typer
packages= find:

[options.package_data]
chroma =
  data_manager
  app_backend
  chroma-ui

# https://stackoverflow.com/questions/56534678/how-to-create-a-cli-in-python-that-can-be-installed-with-pip
[options.entry_points]
console_scripts=
    chroma=chroma.cli:run
