[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chroma_client"
dynamic = ["version"]
dependencies = [
  'pyarrow ~= 9.0',
  'requests',
  'httpx'
]

authors = [
  { name="Jeff Huber", email="jeff@trychroma.com" },
  { name="Anton Troynikov", email="anton@trychroma.com" }
]
description = "Chroma."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/chroma-core/chroma"
"Bug Tracker" = "https://github.com/chroma-core/chroma/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools_scm]
root=".."
local_scheme="dirty-tag"

[options.extras_require]
test = [
  'pytest',
  'httpx'
]