[metadata]
name = todoer
version = 0.0.1
author = Jeff Huber
author_email = jeffchuber@gmail.com
description = Demo pip package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    gql
    aiohttp
    gorilla