[package]
name = "rust_bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_bindings"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.10.0", features = ["rt-multi-thread"] }
chroma-sysdb = { workspace = true }
chroma-system = { workspace = true }
chroma-types = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }
