[package]
name = "chroma-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
indexmap = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
