[package]
name = "chroma-api-types"
version = "0.6.0"
edition = "2021"
description = "Chroma-provided crate for api-types used in the Chroma API."
license = "Apache-2.0"
repository = "https://github.com/chroma-core/chroma"

[dependencies]
serde.workspace = true
utoipa = { version = "5.0.0", features = ["macros", "axum_extras", "debug", "uuid"], optional = true }

[features]
utoipa = ["dep:utoipa"]
