[package]
name = "benchmark-datasets"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.88"
async-compression = { version = "0.4.12", features = [
  "tokio",
  "gzip",
  "bzip2",
] }
async-tempfile = "0.6.0"
bincode = "1.3.3"
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
futures.workspace = true
rand.workspace = true
reqwest = { version = "0.12.7", features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
tokio = { workspace = true }
tokio-stream = { version = "0.1.16", features = ["full"] }
tokio-util = "0.7.12"
