[package]
name = "chroma-benchmark"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
arrow = { workspace = true }
bincode = { workspace = true }
criterion = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
parquet = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tantivy = { workspace = true }
tokio = { workspace = true }

anyhow = "1.0.93"
async-tempfile = "0.6.0"
async-compression = { version = "0.4.18", features = ["tokio", "gzip", "bzip2"] }
dirs = "5.0.1"
reqwest = { workspace = true, features = ["stream"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tokio-util = "0.7.12"
bloom = "0.3.2"
hf-hub = { version = "0.4.1", features = ["tokio", "rustls-tls"] }
sprs = { workspace = true }
