[package]
name = "chroma-blockstore"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
roaring = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
shuttle = { workspace = true }

chroma-error = { workspace = true }
chroma-config = { workspace = true }
chroma-storage = { workspace = true }
chroma-proto = { workspace = true }
