[package]
name = "chroma-blockstore"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
roaring = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
shuttle = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
num_cpus = { workspace = true }
flatbuffers = { workspace = true }
itertools = { workspace = true }

chroma-error = { workspace = true }
chroma-config = { workspace = true }
chroma-storage = { workspace = true }
chroma-cache = { workspace = true }
chroma-types = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
proptest-state-machine = { workspace = true }
bincode = { workspace = true }
