[package]
name = "chroma-cache"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
# TODO(MrCroxx): switch to a release version after the new features are included.
foyer = { git = "https://github.com/foyer-rs/foyer", rev = "7e0b714a065a54b15b649bc9f58b5e36de20964f", features = [
  "opentelemetry_0_27",
] }
anyhow = "1.0"
opentelemetry = { version = "0.27.0", default-features = false, features = [
  "trace",
  "metrics",
] }

# TODO(rescrv):  Deprecated.  Find a suitable replacement for such things.
serde_yaml = "0.9"

async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

chroma-config = { workspace = true }
chroma-error = { workspace = true }
chroma-types = { workspace = true }

[features]
default = []
tracing = ["foyer/tracing"]
