[package]
name = "chroma-cache"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
foyer = { version = "0.13.1", features = ["opentelemetry_0_27", "tracing"] }
anyhow = "1.0"
opentelemetry = { version = "0.27.0", default-features = false, features = [
  "trace",
  "metrics",
] }

# TODO(rescrv):  Deprecated.  Find a suitable replacement for such things.
serde_yaml = "0.9"

async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

chroma-config = { workspace = true }
chroma-error = { workspace = true }
chroma-types = { workspace = true }

[features]
default = []
tracing = ["foyer/tracing"]
